[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Menus/Room/GameRoomSearch.gd" type="Script" id=1]
[ext_resource path="res://UI/Menus/Room/GameRoomList.gd" type="Script" id=2]
[ext_resource path="res://UI/Menus/Room/GameRoomMenu.gd" type="Script" id=3]

[node name="GameRoomMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameRoomSearch" type="PanelContainer" parent="CenterContainer"]
margin_left = 301.0
margin_top = 179.0
margin_right = 723.0
margin_bottom = 421.0
script = ExtResource( 1 )

[node name="Content" type="VBoxContainer" parent="CenterContainer/GameRoomSearch"]
margin_left = 7.0
margin_top = 7.0
margin_right = 415.0
margin_bottom = 235.0

[node name="TopBar" type="HBoxContainer" parent="CenterContainer/GameRoomSearch/Content"]
margin_right = 408.0
margin_bottom = 24.0

[node name="Btn_CreateRoom" type="Button" parent="CenterContainer/GameRoomSearch/Content/TopBar"]
margin_right = 94.0
margin_bottom = 24.0
text = "Create Room"

[node name="LineEdit_RoomFilter" type="LineEdit" parent="CenterContainer/GameRoomSearch/Content/TopBar"]
margin_left = 98.0
margin_right = 298.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
placeholder_text = "Filter Rooms..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_Refresh" type="Button" parent="CenterContainer/GameRoomSearch/Content/TopBar"]
margin_left = 302.0
margin_right = 362.0
margin_bottom = 24.0
text = "Refresh"

[node name="Btn_Back" type="Button" parent="CenterContainer/GameRoomSearch/Content/TopBar"]
margin_left = 366.0
margin_right = 408.0
margin_bottom = 24.0
text = "Back"

[node name="ItemList_GameRooms" type="ItemList" parent="CenterContainer/GameRoomSearch/Content"]
margin_top = 28.0
margin_right = 408.0
margin_bottom = 228.0
rect_min_size = Vector2( 0, 200 )
script = ExtResource( 2 )
